--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="true">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".3"/>
+
+    <ImageView
+        android:src="@drawable/big_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        />
+
+    <TextView
+        android:id="@+id/txt1"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:fontFamily="@font/noto_sans_bold"
+        android:gravity="center"
+        android:text="Log In Now"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
+
+    <TextView
+        android:id="@+id/txt2"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:fontFamily="@font/noto_sans"
+        android:gravity="center"
+        android:text="Please login to continue our app"
+        android:textColor="@color/material_dynamic_neutral70"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt1" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_code_lay"
+        app:counterMaxLength="10"
+        style="@style/OutlinedRoundedBox"
+        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
+        android:layout_width="450sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:hintAnimationEnabled="true"
+        app:errorEnabled="true"
+        app:startIconTint="@color/material_dynamic_neutral60"
+        android:textColorHint="@color/material_dynamic_neutral70"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt2"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans"
+            android:hint="회원사 코드"
+            android:singleLine="true"
+            android:textSize="18sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_id_lay"
+        app:counterMaxLength="10"
+        style="@style/OutlinedRoundedBox"
+        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
+        android:layout_width="450sp"
+        android:layout_height="wrap_content"
+        app:hintAnimationEnabled="true"
+        app:errorEnabled="true"
+        app:startIconTint="@color/material_dynamic_neutral60"
+        android:textColorHint="@color/material_dynamic_neutral70"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_code_lay"
+        >
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans"
+            android:hint="아이디"
+            android:singleLine="true"
+            android:textSize="18sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_pw_lay"
+        app:counterMaxLength="10"
+        style="@style/OutlinedRoundedBox"
+        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
+        android:layout_width="450sp"
+        android:layout_height="wrap_content"
+        app:hintAnimationEnabled="true"
+        app:errorEnabled="true"
+        app:startIconTint="@color/material_dynamic_neutral60"
+        android:textColorHint="@color/material_dynamic_neutral70"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_id_lay"
+        >
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_pw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/noto_sans"
+            android:hint="비밀번호"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textSize="20sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/OutlinedRoundedButton"
+        android:id="@+id/login_btn"
+        android:layout_width="450sp"
+        android:layout_height="70sp"
+        android:text="로그인"
+        android:backgroundTint="@color/eblue60"
+        android:layout_marginTop="70dp"
+        android:insetBottom="0dp"
+        android:insetTop="0dp"
+        android:textSize="25sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/noto_sans_bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_pw_lay"
+        app:strokeWidth="0dp"
+       />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:fontFamily="@font/noto_sans"
+        android:gravity="center"
+        android:text="회원가입 및 관련 문의는 PC버전에서만 가능합니다."
+        android:textColor="@color/material_dynamic_neutral80"
+        android:textSize="18sp"
+        android:layout_marginTop="30dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_btn" />
 
 
 
