--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <color name="edarkblue">#00578a</color>
+    #B2E5F6
+    <color name="eblue40">#00A5E5</color>
+    <color name="eblue60">#0285BE</color>
+    <color name="eblue80">#00578A</color>
 </resources>
