--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    #B2E5F6
+
+
     <color name="eblue40">#00A5E5</color>
     <color name="eblue60">#0285BE</color>
     <color name="eblue80">#00578A</color>
+
+    <color name="egray30">#D3D3D3</color>
+    <color name="egray40">#B2B2B2</color>
+    <color name="egray50">#929292</color>
+    <color name="egray60">#717171</color>
+    <color name="egray70">#515151</color>
+    <color name="egray80">#303030</color>
+    <color name="egray90">#101010</color>
 </resources>
