--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true">
@@ -10,74 +13,115 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".3"/>
+        app:layout_constraintGuide_percent=".25"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".85"/>
 
     <ImageView
-        android:src="@drawable/big_logo"
-        android:layout_width="wrap_content"
+        android:src ="@drawable/big_logo"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="100dp"
+
+        android:scaleType="fitXY"
+
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guideline1"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         />
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="@font/noto_sans_bold"
         android:gravity="center"
         android:text="Log In Now"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:autoSizeMaxTextSize="30sp"
+        android:autoSizeMinTextSize="20sp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintWidth_percent="0.70"
+        app:layout_constraintHeight_percent="0.06"
+
 
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline" />
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        app:layout_constraintBottom_toTopOf="@id/txt2"/>
 
     <TextView
         android:id="@+id/txt2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
+        android:autoSizeMaxTextSize="15sp"
+        android:autoSizeTextType="uniform"
         android:fontFamily="@font/noto_sans"
-        android:gravity="center"
+        android:foregroundGravity="top"
+        android:gravity="center_horizontal"
         android:text="Please login to continue our app"
-        android:textColor="@color/material_dynamic_neutral70"
+
+        android:textColor="@color/egray50"
+
+
         android:textSize="20sp"
-        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@id/input_code_lay"
 
         app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt1" />
+        app:layout_constraintTop_toBottomOf="@id/txt1"
+        app:layout_constraintWidth_percent="0.75" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_code_lay"
         app:counterMaxLength="10"
         style="@style/OutlinedRoundedBox"
         android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
-        android:layout_width="450sp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:hintAnimationEnabled="true"
-        app:errorEnabled="true"
-        app:startIconTint="@color/material_dynamic_neutral60"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        app:errorEnabled="false"
+
+        android:textColorHint="@color/egray40"
+
+        app:layout_constraintWidth_percent="0.75"
+        app:layout_constraintHeight_percent="0.07"
+
+        android:layout_marginBottom="5dp"
+
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt2"
+        app:layout_constraintBottom_toTopOf="@id/input_id_lay"
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_code"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fontFamily="@font/noto_sans"
             android:hint="회원사 코드"
             android:singleLine="true"
-            android:textSize="18sp" />
+            android:autoSizeTextType="uniform" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,26 +130,32 @@
         app:counterMaxLength="10"
         style="@style/OutlinedRoundedBox"
         android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
-        android:layout_width="450sp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:hintAnimationEnabled="true"
-        app:errorEnabled="true"
-        app:startIconTint="@color/material_dynamic_neutral60"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        app:errorEnabled="false"
+        android:textColorHint="@color/egray40"
+        app:layout_constraintWidth_percent="0.75"
+        app:layout_constraintHeight_percent="0.07"
+
+        android:layout_marginBottom="5dp"
+
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_code_lay"
+        app:layout_constraintBottom_toTopOf="@id/input_pw_lay"
         >
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fontFamily="@font/noto_sans"
             android:hint="아이디"
-            android:singleLine="true"
-            android:textSize="18sp" />
+            android:autoSizeTextType="uniform"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -115,15 +165,20 @@
         app:counterMaxLength="10"
         style="@style/OutlinedRoundedBox"
         android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
-        android:layout_width="450sp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:hintAnimationEnabled="true"
-        app:errorEnabled="true"
-        app:startIconTint="@color/material_dynamic_neutral60"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        app:errorEnabled="false"
+        android:textColorHint="@color/egray40"
+        app:layout_constraintWidth_percent="0.75"
+        app:layout_constraintHeight_percent="0.07"
+
+        android:layout_marginBottom="5dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_id_lay"
+        app:layout_constraintBottom_toTopOf="@id/login_btn"
         >
 
 
@@ -135,7 +190,7 @@
             android:hint="비밀번호"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textSize="20sp" />
+            android:autoSizeTextType="uniform"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,37 +198,53 @@
     <com.google.android.material.button.MaterialButton
         style="@style/OutlinedRoundedButton"
         android:id="@+id/login_btn"
-        android:layout_width="450sp"
-        android:layout_height="70sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="로그인"
+        android:textAllCaps="false"
         android:backgroundTint="@color/eblue60"
-        android:layout_marginTop="70dp"
         android:insetBottom="0dp"
         android:insetTop="0dp"
-        android:textSize="25sp"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="18sp"
         android:textColor="@color/white"
-        android:fontFamily="@font/noto_sans_bold"
+        android:fontFamily="@font/noto_sans"
+        app:layout_constraintWidth_percent="0.75"
+        app:layout_constraintHeight_percent="0.065"
+
+        android:layout_marginTop="40dp"
+
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_pw_lay"
+        app:layout_constraintBottom_toTopOf="@id/description"
         app:strokeWidth="0dp"
-       />
+        />
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="@font/noto_sans"
         android:gravity="center"
+        android:layout_marginHorizontal="60dp"
+        android:maxLines="1"
         android:text="회원가입 및 관련 문의는 PC버전에서만 가능합니다."
-        android:textColor="@color/material_dynamic_neutral80"
-        android:textSize="18sp"
-        android:layout_marginTop="30dp"
+        android:textColor="@color/egray50"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="13sp"
+        android:autoSizeMinTextSize="10sp"
+
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintHeight_percent="0.03"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/login_btn" />
 
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
