--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,85 +12,120 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".22"/>
+        app:layout_constraintGuide_percent=".25"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".05"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".5"/>
+        app:layout_constraintGuide_percent=".85"/>
 
-<!--    <ImageView-->
-<!--        android:src="@drawable/big_logo"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/guideline"-->
-<!--        />-->
+    <ImageView
+        android:src ="@drawable/big_logo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:scaleType="fitXY"
+
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guideline1"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        />
 
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieView"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline"
-        app:layout_constraintBottom_toBottomOf="@id/guideline2"
-        app:lottie_rawRes="@raw/welcome"
+        app:layout_constraintBottom_toTopOf="@id/txt1"
+        app:layout_constraintWidth_percent="0.70"
+        app:layout_constraintHeight_percent="0.25"
+
+        app:lottie_rawRes="@raw/welcom_logo"
         app:lottie_loop="true" />
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="@font/noto_sans"
+        android:fontFamily="@font/noto_sans_bold"
         android:gravity="center"
-        android:layout_marginTop="120dp"
         android:text="Welcome"
         android:textColor="@color/black"
-        android:textSize="50sp"
-        android:textStyle="bold"
+        android:autoSizeMaxTextSize="30sp"
+        android:autoSizeMinTextSize="20sp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintWidth_percent="0.70"
+        app:layout_constraintHeight_percent="0.07"
+
+        android:layout_marginTop="30dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lottieView" />
+        app:layout_constraintTop_toBottomOf="@id/lottieView"
+        app:layout_constraintBottom_toTopOf="@id/txt2"/>
 
     <TextView
         android:id="@+id/txt2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="15sp"
+        android:autoSizeTextType="uniform"
         android:fontFamily="@font/noto_sans"
-        android:gravity="center"
-        android:text="Create an account and access thousand of cool stuffs"
-        android:textColor="@color/material_dynamic_neutral60"
+        android:foregroundGravity="top"
+        android:gravity="center_horizontal"
+        android:text="Create an account and access thousand \nof cool stuffs"
+
+        android:textColor="@color/egray50"
+
         android:textSize="20sp"
-        android:layout_marginTop="10dp"
+
+        app:layout_constraintBottom_toTopOf="@id/welcome_btn"
         app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHeight_percent="0.04"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt1" />
+        app:layout_constraintTop_toBottomOf="@id/txt1"
+        app:layout_constraintWidth_percent="0.75" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/OutlinedRoundedButton"
         android:id="@+id/welcome_btn"
-        android:layout_width="450sp"
-        android:layout_height="70sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="Getting Started"
         android:textAllCaps="false"
         android:backgroundTint="@color/eblue60"
-        android:layout_marginTop="120dp"
         android:insetBottom="0dp"
         android:insetTop="0dp"
-        android:textSize="25sp"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="18sp"
         android:textColor="@color/white"
         android:fontFamily="@font/noto_sans"
+
+        app:layout_constraintWidth_percent="0.75"
+        app:layout_constraintHeight_percent="0.065"
+
+        android:layout_marginTop="80dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt2"
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
+
         app:strokeWidth="0dp"
         />
 
