--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,11 @@
     <color name="lblue40">#2E5EF4</color>
     <color name="lblue50">#0035C0</color>
     <color name="lblue60">#212E55</color>
+
     <color name="lmint10">#52C4C0</color>
+
+    <color name="lgray10">#EFF5FF</color>
+    <color name="lgray20">#A8A5C0</color>
 
 
 
