--- a/app/src/main/res/drawable/onboarding_unselected_dot_blue.xml
+++ b/app/src/main/res/drawable/onboarding_unselected_dot_blue.xml
@@ -4,9 +4,9 @@
         <shape
             android:innerRadius="0dp"
             android:shape="ring"
-            android:thickness="4dp"
+            android:thickness="3dp"
             android:useLevel="false">
-            <solid android:color="@color/lblue30" />
+            <solid android:color="@color/lgray20" />
         </shape>
     </item>
 </layer-list>
