--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.ui.activities.OnboardActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -12,21 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".07"/>
+        app:layout_constraintGuide_percent="0"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_left"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".1"/>
+        app:layout_constraintGuide_percent=".08"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_right2"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".9"/>
+        app:layout_constraintGuide_percent=".92"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_bottom"
@@ -40,14 +40,14 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".73"/>
+        app:layout_constraintGuide_percent=".8"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_bottom2"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".9"/>
+        app:layout_constraintGuide_percent=".92"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/image_onboarding"
@@ -70,30 +70,31 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
 
-        android:text="@string/title_onboarding_1"
-        android:autoSizeTextType="uniform"
         android:autoSizeMaxTextSize="80sp"
+        android:autoSizeTextType="uniform"
+        android:fontFamily="@font/lexend_deca"
         android:gravity="center_vertical"
-        android:fontFamily="@font/noto_sans_bold"
+        android:text="@string/title_onboarding_1"
         android:textColor="@color/lblue60"
+        android:textStyle="bold"
 
-        app:layout_constraintTop_toBottomOf="@id/guideline_bottom"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right2"
         app:layout_constraintBottom_toBottomOf="@id/guideline_bottom1"
-        />
+        app:layout_constraintEnd_toEndOf="@id/guideline_right2"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@id/guideline_bottom" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_onboarding_description"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="10dp"
 
         android:text="@string/description_onboarding_1"
         android:autoSizeTextType="uniform"
-        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeMinTextSize="10sp"
-        android:textColor="@color/material_dynamic_neutral60"
-        android:fontFamily="@font/noto_sans"
+        android:textColor="@color/egray50"
+        android:fontFamily="@font/lexend_deca"
         android:gravity="top"
 
         app:layout_constraintTop_toBottomOf="@id/text_onboarding_title"
