--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -133,42 +134,42 @@
             />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_code_lay"
-            app:counterMaxLength="10"
-            style="@style/OutlinedRoundedBox"
-            android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:hintAnimationEnabled="true"
-            app:errorEnabled="false"
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/input_code_lay"-->
+<!--            app:counterMaxLength="10"-->
+<!--            style="@style/OutlinedRoundedBox"-->
+<!--            android:theme="@style/ThemeOverlay.TextInputLayout.TextView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:hintAnimationEnabled="true"-->
+<!--            app:errorEnabled="false"-->
 
-            android:textColorHint="@color/egray40"
+<!--            android:textColorHint="@color/egray40"-->
 
-            app:layout_constraintWidth_percent="0.75"
-            app:layout_constraintHeight_percent="0.07"
+<!--            app:layout_constraintWidth_percent="0.75"-->
+<!--            app:layout_constraintHeight_percent="0.07"-->
 
-            android:layout_marginBottom="5dp"
-            app:boxStrokeWidthFocused=".5dp"
+<!--            android:layout_marginBottom="5dp"-->
+<!--            app:boxStrokeWidthFocused=".5dp"-->
 
-            app:hintTextColor="@color/lblue30"
+<!--            app:hintTextColor="@color/lblue30"-->
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideline_top1"
-            app:layout_constraintBottom_toTopOf="@id/input_id_lay"
-            >
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/guideline_top1"-->
+<!--            app:layout_constraintBottom_toTopOf="@id/input_id_lay"-->
+<!--            >-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_code"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/noto_sans"
-                android:hint="회원사 코드"
-                android:singleLine="true"
-                android:autoSizeTextType="uniform" />
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/input_code"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:fontFamily="@font/noto_sans"-->
+<!--                android:hint="회원사 코드"-->
+<!--                android:singleLine="true"-->
+<!--                android:autoSizeTextType="uniform" />-->
 
-        </com.google.android.material.textfield.TextInputLayout>
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_id_lay"
@@ -190,7 +191,7 @@
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/input_code_lay"
+            app:layout_constraintTop_toBottomOf="@id/guideline_top1"
             app:layout_constraintBottom_toTopOf="@id/input_pw_lay"
             >
 
@@ -224,6 +225,7 @@
             app:boxStrokeWidthFocused=".5dp"
             app:hintTextColor="@color/lblue30"
 
+            app:passwordToggleEnabled="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_id_lay"
