--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,8 @@
     <color name="lgray10">#EFF5FF</color>
     <color name="lgray20">#A8A5C0</color>
 
+    <color name="bgray">#FBFCFE</color>
+
 
 
 
