--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,4 +82,11 @@
         <item name="android:paddingBottom">0dp</item>
     </style>
 
+
+    <style name="BottomNavigationTextStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">lexend_deca</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
