--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_gradient_background"
@@ -29,10 +28,11 @@
         app:abb_indicatorAppearance="round"
         app:abb_indicatorMargin="16dp"
         app:abb_indicatorHeight="4dp"
+        app:abb_indicatorColor="@color/lblue30"
         app:abb_tabs="@menu/tabs"
         app:abb_selectedIndex="1"
         app:abb_tabColor="@color/egray40"
-        app:abb_tabColorSelected="@color/lblue40"
+        app:abb_tabColorSelected="@color/lblue30"
         app:abb_tabColorDisabled="@color/egray40"
         app:abb_textAppearance="@style/BottomNavigationTextStyle"
         app:abb_iconSize="20dp"
