--- a/app/src/main/res/layout/item_slide_model.xml
+++ b/app/src/main/res/layout/item_slide_model.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-  <com.esteel4u.realtimeauctionapp.view.utils.CornerImageView
-      android:id="@+id/banner_image"
+  <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:contentDescription="sdfsdf"
-      android:scaleType="centerCrop" />
+      android:layout_margin="3dp"
+      app:cardCornerRadius="20dp">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="응애애"
+        android:gravity="center"
+        android:textSize="@dimen/dp_20"/>
 
-</layout>
+  </androidx.cardview.widget.CardView>
+
+
+<!--  <com.esteel4u.realtimeauctionapp.view.utils.CornerImageView-->
+<!--      android:id="@+id/banner_image"-->
+<!--      android:layout_width="match_parent"-->
+<!--      android:layout_height="match_parent"-->
+<!--      android:contentDescription="sdfsdf"-->
+<!--      android:scaleType="centerCrop" />-->
+
+</RelativeLayout>
