--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,16 @@
         app:abb_indicatorAppearance="round"
         app:abb_indicatorMargin="16dp"
         app:abb_indicatorHeight="4dp"
-        app:abb_indicatorColor="@color/lblue30"
+        app:abb_indicatorColor="@color/lblue60"
         app:abb_tabs="@menu/tabs"
         app:abb_selectedIndex="1"
         app:abb_tabColor="@color/egray40"
-        app:abb_tabColorSelected="@color/lblue30"
+        app:abb_tabColorSelected="@color/lblue60"
         app:abb_tabColorDisabled="@color/egray40"
         app:abb_textAppearance="@style/BottomNavigationTextStyle"
         app:abb_iconSize="20dp"
         app:abb_tabAnimationSelected="slide"
+        app:abb_textSize="@dimen/dp_13"
         app:abb_tabAnimation="slide"
         app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
 
