--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -148,9 +148,9 @@
 
                 android:text="skip"
                 app:autoSizeTextType="uniform"
-                app:autoSizeMaxTextSize="18dp"
-                app:autoSizeMinTextSize="16dp"
-                app:textAllCaps="true"
+                app:autoSizeMaxTextSize="15dp"
+                app:autoSizeMinTextSize="12dp"
+                app:textAllCaps="false"
                 android:gravity="center_vertical"
                 android:textColor="@color/egray40"
                 android:fontFamily="@font/lexend_deca"
