--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,73 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_left"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".1"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_right"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".9"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".075"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top1"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".18"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top2"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".23"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top3"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".6"/>
+
 
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/hello_txt"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="응애응애"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/dp_34"
+        android:text="Hello, Chris"
+        android:layout_marginTop="@dimen/dp_50"
+        android:fontFamily="@font/lexend_deca"
+        android:textStyle="bold"
         app:autoSizeTextType="uniform"
-        android:autoSizeMaxTextSize="20sp"
-        android:autoSizeMinTextSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/banner_view"/>
+        app:autoSizeMaxTextSize="34sp"
+        app:autoSizeMinTextSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.zhpan.bannerview.BannerViewPager
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_185"
-        android:layout_marginTop="@dimen/dp_16"
+        android:layout_height="@dimen/dp_160"
+        android:layout_marginTop="@dimen/dp_20"
+        app:bvp_indicator_visibility="visible"
         app:bvp_indicator_slide_mode="worm"
-        app:bvp_indicator_radius="@dimen/dp_6"
+        app:bvp_indicator_radius="@dimen/dp_4"
         app:bvp_indicator_style="round_rect"
-        app:layout_constraintTop_toBottomOf="@id/hello_txt"
-        app:layout_constraintBottom_toTopOf="@id/type_txt"/>
+        app:layout_constraintTop_toBottomOf="@id/hello_txt"/>
 
-<!--    <com.zhpan.indicator.IndicatorView-->
-<!--        android:id="@+id/indicator_view"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/banner_view"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/banner_view"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/type_txt"/>-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/type_txt"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent=".1"
-        android:text="응애응애"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/dp_26"
+        android:text="Types"
+        android:fontFamily="@font/lexend_deca"
+        android:textStyle="bold"
         app:autoSizeTextType="uniform"
-        android:autoSizeMaxTextSize="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:autoSizeMaxTextSize="25sp"
+        app:autoSizeMinTextSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
         app:layout_constraintTop_toBottomOf="@id/banner_view"
-        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
         />
 
+    <com.zhpan.bannerview.BannerViewPager
+        android:id="@+id/types_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_150"
+        android:layout_marginTop="@dimen/dp_10"
+        app:layout_constraintTop_toBottomOf="@id/type_txt"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/today_txt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/dp_26"
+        android:text="Today"
+        android:fontFamily="@font/lexend_deca"
+        android:textStyle="bold"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMaxTextSize="25sp"
+        app:autoSizeMinTextSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/types_card_view"
+        />
 
     <com.ramotion.garlandview.TailRecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
         app:layout_constraintHeight_percent=".1"
         android:clipChildren="false"
-        app:layout_constraintTop_toBottomOf="@id/type_txt"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/today_txt"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
 
 
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
