--- a/app/src/main/res/layout/item_home_type_slider_model.xml
+++ b/app/src/main/res/layout/item_home_type_slider_model.xml
@@ -8,14 +8,17 @@
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_margin="3dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginHorizontal="5dp"
+      android:layout_marginBottom="30dp"
+      app:cardElevation="3dp"
       app:cardCornerRadius="20dp">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="응애애"
-        android:gravity="center"
-        android:textSize="@dimen/dp_20"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="응애애"-->
+<!--        android:gravity="center"-->
+<!--        android:textSize="@dimen/dp_20"/>-->
 
   </androidx.cardview.widget.CardView>
 
