--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -298,6 +298,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/today_recycler_view"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="true"
