--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -42,6 +42,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/like_recycler_view"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipChildren="true"
